--- a/01_Day/01_day_starter/index.html
+++ b/01_Day/01_day_starter/index.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
-    <title>30DaysOfJavaScript</title>
+    <title>30 días de JavaScript</title>
 </head>
 
 <body>
-        <h1>30DaysOfJavaScript:03 Day</h1>
-        <h2>Introduction</h2>
-        <button onclick="alert('Welcome to 30DaysOfJavaScript!');">Click Me</button>
+        <h1>30 días de JavaScript: Día 1</h1>
+        <h2>Introducción</h2>
+        <button id="btn" onclick="alert('Bienvenido a 30díasDeJavaScript!');">Cliquéame!</button>
         <script src="./helloworld.js"></script>
         <script src="./introduction.js"></script>
         <script src="./varaible.js"></script>
