--- a/03_Day/03_day_starter/index.html
+++ b/03_Day/03_day_starter/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <title>30DaysOfJavaScript: 03 Day</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1>30DaysOfJavaScript:03 Day</h1>
     <h2>Booleans, undefined, null, date object</h2>
+    <p id="ficha"></p>
+    <p id="pais"></p>
 
     <!-- import your scripts here -->
     <script src="./scripts/main.js"></script>
-
-</body>
-
+  </body>
 </html>
